--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#00A5E5",
-  "background_color": "#ffffff"
+  "background_color": "#00A5E5"
 }
